Actualizada lista de ingredientes lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -20,9 +20,10 @@
 			<li>Salsa de tomates.</li>
 			<li>Una fuente.</li>
 			<li>Mucha fe.</li>
+			<li>Queso.</li>
 		</ol>
 		<h2>Preparation:</h2>
-		<p>Pones las masitas en la fuente, les echas salsa, queso (se me olvidó ponerlo arriba, va para commit) y listo, a disfrutar.</p>
+		<p>Pones las masitas en la fuente, les echas salsa, queso por capas, repites y listo, a disfrutar.</p>
 	</div>
   </br>
   <a href="../index.html">Volver a la página anterior</a>
